--- a/api-emr-diagnostic/api-config.json
+++ b/api-emr-diagnostic/api-config.json
@@ -1,5 +1,5 @@
 {
-  "name" : "EMR-DiagnosticInfo-2",
+  "name" : "EMR-DiagnosticInfo",
   "path" : "/api/emr/diagnostic",
   "state" : "published",
   "version" : "3.7",
