--- a/.github/workflows/api-emr-catalog.yml
+++ b/.github/workflows/api-emr-catalog.yml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   API-Deployment:
+    env:
+      workingDirectory: api-emr-catalog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
