--- a/api-emr-catalog/config/api-config.json
+++ b/api-emr-catalog/config/api-config.json
@@ -1,5 +1,5 @@
 {
-  "name" : "EMR-HealthCatalog",
+  "name" : "EMR-HealthCatalog-2",
   "path" : "/api/emr/catalog",
   "state" : "published",
   "version" : "3.7",
