--- a/.github/workflows/api-emr-catalog.yml
+++ b/.github/workflows/api-emr-catalog.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   API-Deployment:
     env:
-      workingDirectory: api-emr-catalog
+      workingDirectory: 'api-emr-catalog'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
