--- a/.github/workflows/api-emr-catalog.yml
+++ b/.github/workflows/api-emr-catalog.yml
@@ -38,4 +38,4 @@ jobs:
           APIM_PORT: ${{ secrets.APIM_PORT }}
         run: |
           printenv
-          mvn clean exec:java
+          mvn clean exec:java --file config/pom.xml
