--- a/.github/workflows/api-emt-diagnostic.yml
+++ b/.github/workflows/api-emt-diagnostic.yml
@@ -1,15 +1,15 @@
-name: Deploy EMR-Catalog API
+name: Deploy EMR-Diagnotics API
 
 on:
   push:
     branches:
       - main
     paths:
-      - api-emr-catalog/**
+      - api-emr-diagnostic/**
 
 defaults:
   run:
-    working-directory: api-emr-catalog
+    working-directory: api-emr-diagnostic
 
 jobs:
   API-Deployment:
