--- a/.github/workflows/api-emt-diagnostic.yml
+++ b/.github/workflows/api-emt-diagnostic.yml
@@ -38,9 +38,9 @@ jobs:
           APIM_PORT: ${{ secrets.APIM_PORT }}
         run: mvn clean exec:java
 
-  Deploy-API-Package:
-    needs: API-Deployment
+  Publish-API:
     runs-on: ubuntu-latest
+    steps:
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
