--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -6,6 +6,11 @@ on:
       - main
     paths:
       - api-emr-diagnostic/**
+  release:
+    types:
+      - published
+    tags:
+      - '*api-emr-diagnostic*'
 
 defaults:
   run:
@@ -40,8 +45,29 @@ jobs:
 
   Publish-API:
     runs-on: ubuntu-latest
+    needs: API-Deployment
     steps:
       - name: Publish package
         run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+  Release-API:
+    if: github.event.check_suite.app.name == 'Netlify' && github.event.check_suite.conclusion == 'success'
+    runs-on: ubuntu-latest
+    needs: API-Deployment
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          server-id: github
+      - name: Configure Git user
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+      - name: Release package
+        run: ./mvnw -B release:prepare release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
