--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -47,6 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: API-Deployment
     steps:
+      - uses: hmarr/debug-action@v2
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
@@ -55,6 +56,7 @@ jobs:
   Release-API:
     if: github.event.check_suite.app.name == 'Netlify' && github.event.check_suite.conclusion == 'success'
     runs-on: ubuntu-latest
+    needs: API-Deployment
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
