--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -54,7 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
   Release-API:
-    if: github.event.check_suite.app.name == 'Netlify' && github.event.check_suite.conclusion == 'success'
+    if: github.event.release.tag_name
     runs-on: ubuntu-latest
     needs: API-Deployment
     steps:
