--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -59,6 +59,8 @@ jobs:
     needs: API-Deployment
     steps:
       - uses: actions/checkout@v2
+        with:
+          branch: main
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
