--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -35,23 +35,23 @@ jobs:
       - name: List current directory
         run: |
           ls -la
-      - name: Deploy API
-        env:
-          APIM_USER: ${{ secrets.APIM_USER }}
-          APIM_PASS: ${{ secrets.APIM_PASS }}
-          APIM_HOST: ${{ secrets.APIM_HOST }}
-          APIM_PORT: ${{ secrets.APIM_PORT }}
-        run: mvn clean exec:java
+#      - name: Deploy API
+#        env:
+#          APIM_USER: ${{ secrets.APIM_USER }}
+#          APIM_PASS: ${{ secrets.APIM_PASS }}
+#          APIM_HOST: ${{ secrets.APIM_HOST }}
+#          APIM_PORT: ${{ secrets.APIM_PORT }}
+#        run: mvn clean exec:java
 
-  Publish-API:
-    runs-on: ubuntu-latest
-    needs: API-Deployment
-    steps:
-      - uses: hmarr/debug-action@v2
-      - name: Publish package
-        run: mvn --batch-mode deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#  Publish-API:
+#    runs-on: ubuntu-latest
+#    needs: API-Deployment
+#    steps:
+#      - uses: hmarr/debug-action@v2
+#      - name: Publish package
+#        run: mvn --batch-mode deploy
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
   Release-API:
     if: github.event.release.tag_name
@@ -71,6 +71,8 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
       - name: Release package
-        run: mvn -B release:prepare release:perform
+        run: |
+          git status
+          mvn -B release:prepare release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
