--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -60,7 +60,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          branch: main
+          ref: main
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
