--- a/api-emr-diagnostic4prod/pom.xml
+++ b/api-emr-diagnostic4prod/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
             <url>https://maven.pkg.github.com/cwiechmann/api-project-examples</url>
         </repository>
     </distributionManagement>
-
+    
     <scm>
         <developerConnection>scm:git:https://github.com/cwiechmann/api-project-examples.git</developerConnection>
     </scm>
@@ -32,11 +32,21 @@
             <artifactId>apimcli-apis</artifactId>
             <version>1.3.7</version>
         </dependency>
+        <!-- A reference to the API which should be deployed on Prod -->
+        <dependency>
+            <groupId>axway.api-management.api</groupId>
+            <artifactId>emr-diagnostic-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Deploys the API to the API-Management platform -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -57,24 +67,6 @@
                         -c ${apiConfigFile} -h ${env.APIM_HOST} -u ${env.APIM_USER} -p ${env.APIM_PASS} -port ${env.APIM_PORT} -force -returnCodeMapping 10:0
                     </commandlineArgs>
                 </configuration>
-            </plugin>
-            <!-- Create a deployable artefact -->
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>api-assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
