--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -70,9 +70,14 @@ jobs:
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
-      - name: Release package
+      - name: Release prepare
         run: |
           git status
           mvn -B -f api-emr-diagnostic/pom.xml release:prepare release:perform
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release perform
+        run: |
+          mvn -B -f api-emr-diagnostic/pom.xml release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
