--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy EMR-Diagnotics API
+name: EMR-Diagnotics API
 
 on:
   push:
@@ -12,13 +12,33 @@ on:
     tags:
       - '*api-emr-diagnostic*'
 
-#defaults:
-#  run:
-#    working-directory: api-emr-diagnostic
+defaults:
+  run:
+    working-directory: api-emr-diagnostic
 
 jobs:
-  API-Deployment:
+  create-latest-docker-image:
+    name: Push Docker image to Docker Hub (latest)
     runs-on: ubuntu-latest
+    steps:
+      - uses: hmarr/debug-action@v2
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to GitHub Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build container image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: docker.pkg.github.com/${{ github.repository }}/octo-image:latest
+  deploy-api:
+    name: Deploy API on API-Management
+    runs-on: ubuntu-latest
+    needs: Create-Docker-Image
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -32,16 +52,13 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: List current directory
-        run: |
-          ls -la
-#      - name: Deploy API
-#        env:
-#          APIM_USER: ${{ secrets.APIM_USER }}
-#          APIM_PASS: ${{ secrets.APIM_PASS }}
-#          APIM_HOST: ${{ secrets.APIM_HOST }}
-#          APIM_PORT: ${{ secrets.APIM_PORT }}
-#        run: mvn clean exec:java
+      - name: Deploy API
+        env:
+          APIM_USER: ${{ secrets.APIM_USER }}
+          APIM_PASS: ${{ secrets.APIM_PASS }}
+          APIM_HOST: ${{ secrets.APIM_HOST }}
+          APIM_PORT: ${{ secrets.APIM_PORT }}
+        run: mvn clean exec:java
 
 #  Publish-API:
 #    runs-on: ubuntu-latest
@@ -52,7 +69,7 @@ jobs:
 #        run: mvn --batch-mode deploy
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+   
   Release-API:
     if: github.event.release.tag_name
     runs-on: ubuntu-latest
