--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -38,7 +38,7 @@ jobs:
   deploy-api:
     name: Deploy API on API-Management
     runs-on: ubuntu-latest
-    needs: Create-Docker-Image
+    needs: create-latest-docker-image
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
