--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -73,7 +73,7 @@ jobs:
   Release-API:
     if: github.event.release.tag_name
     runs-on: ubuntu-latest
-    needs: API-Deployment
+    needs: deploy-api
     steps:
       - uses: actions/checkout@v2
         with:
