--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -20,9 +20,9 @@ jobs:
   create-latest-docker-image:
     name: Push Docker image to Docker Hub (latest)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./emr-diagnostic-app
+#    defaults:
+#      run:
+#        working-directory: ./emr-diagnostic-app
     steps:
       - uses: hmarr/debug-action@v2
       - name: Check out the repo
@@ -33,6 +33,9 @@ jobs:
           registry: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: List current directory
+        run: |
+          ls -l
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
