--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - api-emr-diagnostic/**
+      - ${{ env.somevar }}/**
   release:
     types:
       - published
