--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -1,14 +1,14 @@
 name: EMR-Diagnotics API
 
 env:
-  somevar: 'api-emr-diagnostic'
+  apiId: api-emr-diagnostic
 
 on:
   push:
     branches:
       - main
     paths:
-      - ${{ env.somevar }}/**
+      - api-emr-diagnostic/**
   release:
     types:
       - published
@@ -23,9 +23,6 @@ jobs:
   create-latest-docker-image:
     name: Push Docker image to Docker Hub (latest)
     runs-on: ubuntu-latest
-#    defaults:
-#      run:
-#        working-directory: api-emr-diagnostic/emr-diagnostic-app
     steps:
       - uses: hmarr/debug-action@v2
       - name: Check out the repo
@@ -36,16 +33,13 @@ jobs:
           registry: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: List current directory
-        run: |
-          ls -l
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./${{ env.somevar }}/emr-diagnostic-app/Dockerfile
+          file: ./${{ env.apiId }}/emr-diagnostic-app/Dockerfile
           push: true
-          tags: docker.pkg.github.com/${{ github.repository }}/octo-image:latest
+          tags: docker.pkg.github.com/${{ github.repository }}/${{ env.apiId }}:latest
   deploy-api:
     name: Deploy API on API-Management
     runs-on: ubuntu-latest
