--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -21,6 +21,7 @@ defaults:
 
 jobs:
   create-latest-docker-image:
+    if: github.event.release.tag_name
     name: Push Docker image to Docker Hub (latest)
     runs-on: ubuntu-latest
     steps:
@@ -42,12 +43,9 @@ jobs:
           tags: docker.pkg.github.com/${{ github.repository }}/${{ env.apiId }}:latest
   deploy-api-builder:
     name: Deploy API-Builder on K8S
-    needs: create-latest-docker-image
+    #needs: create-latest-docker-image
     runs-on: ubuntu-latest
     steps:
-      - name: List current directory
-        run: |
-          ls -la
       - name: Update deployment file
         run: sed -i 's|<IMAGE>|docker.pkg.github.com/${{ github.repository }}/${{ env.apiId }}:'latest'|' config/api-deployment.yml
       - name: Deploy to Kubernetes
