--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -21,7 +21,7 @@ defaults:
 
 jobs:
   create-latest-docker-image:
-    name: Push Docker image to Docker Hub (latest)
+    name: Create & Push Image
     runs-on: ubuntu-latest
     steps:
       - uses: hmarr/debug-action@v2
@@ -34,7 +34,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Create image tag
-        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+        run: |
+          echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+          echo "Created image tag: $GITHUB_SHA_SHORT"
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
@@ -52,7 +54,10 @@ jobs:
       - name: List current directory
         run: ls -l
       - name: Update deployment file
-        run: sed -i 's|<IMAGE>|docker.pkg.github.com/cwiechmann/api-project-examples/api-emr-diagnostic:'${{ env.GITHUB_SHA_SHORT }}'|' config/api-deployment.yaml
+        run: |
+          echo "Using image tag: ${{ env.GITHUB_SHA_SHORT }}"
+          printenv
+          sed -i 's|<IMAGE>|docker.pkg.github.com/cwiechmann/api-project-examples/api-emr-diagnostic:'$env.GITHUB_SHA_SHORT'|' config/api-deployment.yaml
       - name: Deploy to Kubernetes
         uses: actions-hub/kubectl@master
         env:
