--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -53,6 +53,12 @@ jobs:
         run: ls -l
       - name: Update deployment file
         run: IMAGE_TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|docker.pkg.github.com/cwiechmann/api-project-examples/api-emr-diagnostic:'${IMAGE_TAG}'|' config/api-deployment.yaml
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
       - name: Deploy to Kubernetes
         uses: actions-hub/kubectl@master
         env:
