--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Update deployment file
         run: IMAGE_TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|docker.pkg.github.com/cwiechmann/api-project-examples/api-emr-diagnostic:'${IMAGE_TAG}'|' config/api-deployment.yaml
       - name: Install AWS-CLI
-        uses: unfor19/install-aws-cli-action@v1
+        run: aws --version
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
