--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -63,7 +63,9 @@ jobs:
       - name: Deploy to Kubernetes
         run: |
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
-          ls -l $HOME/.kube/config
+          echo "$HOME"
+          ls -la $HOME/.kube/config
+          ls -la $HOME
           kubectl apply -f ${{ env.apiId }}/config/api-deployment.yaml
       - name: Verify deployment
         uses: actions-hub/kubectl@master
