--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -62,13 +62,9 @@ jobs:
           aws-region: eu-west-1
       - name: Deploy to Kubernetes
         run: |
-          ls -la $HOME
-          printenv
-          echo $HOME
           mkdir  $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
-          ls -la $HOME/.kube/config
-          kubectl apply -f ${{ env.apiId }}/config/api-deployment.yaml
+          kubectl apply -f config/api-deployment.yaml
       - name: Verify deployment
         uses: actions-hub/kubectl@master
         env:
