Added outbound security for the API-Builder Mock-Service

--- a/api-emr-diagnostic/config/api-config.json
+++ b/api-emr-diagnostic/config/api-config.json
@@ -13,6 +13,15 @@
     "Type" : [ "Demo_Amplify_PlexusHealth" ],
     "Category" : [ "Diagnostic" ]
   },
+  "authenticationProfiles" : [ {
+    "name" : "_default",
+    "isDefault" : true,
+    "parameters" : {
+      "username" : "CAF9ySY0ZOAyi2T04lJ1ojyDBFr/sj9t",
+      "password" : ""
+    },
+    "type" : "http_basic"
+  } ],
   "clientOrganizations" : [ "Plexus Health" ],
   "applications" : [ {
     "name" : "Plexus Suite - Appointment Management",
