--- a/.github/workflows/api-emt-diagnostic.deploy.yml
+++ b/.github/workflows/api-emt-diagnostic.deploy.yml
@@ -21,7 +21,7 @@ defaults:
 
 jobs:
   create-latest-docker-image:
-    if: "!contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'skip builder')"
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Create & Push Image
     runs-on: ubuntu-latest
     steps:
@@ -37,6 +37,7 @@ jobs:
       - name: Create image tag
         run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)" >> $GITHUB_ENV
       - name: Build container image
+        if: "!contains(github.event.head_commit.message, 'skip builder')"
         uses: docker/build-push-action@v2
         with:
           context: ./${{ env.apiId }}/emr-diagnostic-app
@@ -62,17 +63,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
       - name: Deploy to Kubernetes
+        if: "!contains(github.event.head_commit.message, 'skip builder')"
         run: |
           mkdir  $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
           kubectl apply -n apim -f config/api-deployment.yaml
       - name: Verify deployment
+        if: "!contains(github.event.head_commit.message, 'skip builder')"
         run: kubectl -n apim rollout status deployment/${{ env.apiId }}
 
   deploy-api:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Deploy API on API-Management
     runs-on: ubuntu-latest
+    needs: deploy-api-builder
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
