--- a/.github/workflows/gateway.apimgr.deploy.yml
+++ b/.github/workflows/gateway.apimgr.deploy.yml
@@ -1,7 +1,8 @@
 name: Deploy API-Manager
 
 env:
-  dockerRegistry: docker.pkg.github.com/cwiechmann/api-project-examples
+  dockerRegistry: docker.pkg.github.com
+  dockerRepository: cwiechmann/api-project-examples
   baseImage: "base:77-20210330"
   outImage: manager:77-20210330-v1"
 
@@ -31,21 +32,21 @@ jobs:
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: docker-registry.demo.axway.com
+          registry: ${{ env.dockerRegistry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Pull base image
-        run: docker pull ${{ env.dockerRegistry }}/${{ env.baseImage }}
+        run: docker pull ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }}
       - name: Create image tag
         run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)" >> $GITHUB_ENV
       - name: Build image
         run: |
           tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimgr/fed --out-image=${{ env.dockerRegistry }}/${{ env.outImage }}
+          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimgr/fed --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}
       - name: Push image
         run: |
-          docker push ${{ env.dockerRegistry }}/${{ env.outImage }}
+          docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
