--- a/.github/workflows/gateway.apimgr.deploy.yml
+++ b/.github/workflows/gateway.apimgr.deploy.yml
@@ -43,8 +43,7 @@ jobs:
         run: |
           tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ls -la
-          python -h
+          echo "./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimgr/fed --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}"
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}
