--- a/.github/workflows/gateway.apimgr.deploy.yml
+++ b/.github/workflows/gateway.apimgr.deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Create image tag
         run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)" >> $GITHUB_ENV
       - name: Create FED-File
-        run: tar cvfz apimanager.fed apimgr/fed/*
+        run: jar cvfm manager.fed apimgr/fed/meta-inf/manifest.mf apimgr/fed/*
       - name: Build image
         run: |
           tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
