--- a/.github/workflows/gateway.apimgr.deploy.yml
+++ b/.github/workflows/gateway.apimgr.deploy.yml
@@ -47,10 +47,10 @@ jobs:
         run: |
           tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimanager.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}
+          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimanager.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
-          docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}
+          docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -61,6 +61,7 @@ jobs:
         run: |
           mkdir  $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
-          kubectl apply -n apim -f config/api-deployment.yaml
+          kubectl set image -n apim deployment/apimgr apimgr=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
+          kubectl set image -n apim deployment/traffic traffic=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
       - name: Verify deployment
         run: kubectl -n apim rollout status deployment/${{ env.apiId }}
