--- a/.github/workflows/gateway.anm.deploy.yml
+++ b/.github/workflows/gateway.anm.deploy.yml
@@ -1,17 +1,17 @@
-name: Deploy API-Manager
+name: Deploy Admin-Node-Manager
 
 env:
   dockerRegistry: docker.pkg.github.com
   dockerRepository: cwiechmann/api-project-examples
   baseImage: "base:77-20210330"
-  outImage: "manager:77-20210330-v1"
+  outImage: "anm:77-20210330-v1"
 
 on:
   push:
     branches:
       - main
     paths:
-      - gateway-config/apimgr/**
+      - gateway-config/anm/**
   release:
     types:
       - published
@@ -23,7 +23,7 @@ defaults:
 jobs:
   create-apimr-docker-image:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
-    name: Create & Push APIMGR Image
+    name: Create & Push ANM Image
     runs-on: ubuntu-latest
     steps:
       - uses: hmarr/debug-action@v2
@@ -41,13 +41,13 @@ jobs:
         run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | head -c7)" >> $GITHUB_ENV
       - name: Create FED-File
         run: |
-          jar cvfm apimanager.fed apimgr/fed/meta-inf/manifest.mf -C apimgr fed
-          jar tvf apimanager.fed
-      - name: Build Manager image
+          jar cvfm anm.fed anm/fed/meta-inf/manifest.mf -C anm fed
+          jar tvf anm.fed
+      - name: Build ANM image
         run: |
           tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --default-cert --fed=apimanager.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
+          ./apigw-emt-scripts-2.2.0-2/build_anm_image.py --default-cert --fed=anm.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
@@ -61,9 +61,6 @@ jobs:
         run: |
           mkdir  $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
-          kubectl set image -n apim deployment/apimgr apimgr=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
-          kubectl set image -n apim deployment/traffic traffic=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
-      - name: Verify Manager deployment
-        run: kubectl -n apim rollout status deployment/apimgr
-      - name: Verify Traffic deployment
-        run: kubectl -n apim rollout status deployment/traffic
+          kubectl set image -n apim deployment/anm anm=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
+      - name: Verify ANM deployment
+        run: kubectl -n apim rollout status deployment/anm
