--- a/.github/workflows/gateway.clientApp.deploy.yml
+++ b/.github/workflows/gateway.clientApp.deploy.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Deploy client apps
         run: |
           ls -la
-          setupOrgsAndApps.sh apps
+          ./setupOrgsAndApps.sh apps
