--- a/.github/workflows/gateway.clientApp.deploy.yml
+++ b/.github/workflows/gateway.clientApp.deploy.yml
@@ -22,5 +22,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Deploy client apps
         run: |
-          ls -la
+          printenv
           ./setupOrgsAndApps.sh apps
