--- a/.github/workflows/gateway.clientApp.deploy.yml
+++ b/.github/workflows/gateway.clientApp.deploy.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Deploy client apps
         env:
-          APIM_HOST: ${{ env.APIM_HOST }}
-          APIM_PORT: ${{ env.APIM_PORT }}
-          APIM_USER: ${{ env.APIM_USER }}
-          APIM_PASS: ${{ env.APIM_PASS }}
+          APIM_HOST: ${{ secret.APIM_HOST }}
+          APIM_PORT: ${{ secret.APIM_PORT }}
+          APIM_USER: ${{ secret.APIM_USER }}
+          APIM_PASS: ${{ secret.APIM_PASS }}
         run: |
           printenv
           ./setupOrgsAndApps.sh apps
