--- a/.github/workflows/api.emr-diagnostic.deploy.yml
+++ b/.github/workflows/api.emr-diagnostic.deploy.yml
@@ -98,6 +98,19 @@ jobs:
           APIM_PORT: ${{ secrets.APIM_PORT }}
         run: mvn clean exec:java
 
+  test-api:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    name: Test API
+    runs-on: ubuntu-latest
+    needs: deploy-api
+    steps:
+      - name: Install newman
+        run: sudo npm -g install newman
+      - name: Run API tests
+        run: |
+          sleep 1
+          newman run ./tests/DiagnosticAPI.postman_collection.json -e ${{ env.HOME }}/lib/Demo-Environment.postman_environment.json --reporter-json-export output.json --insecure
+
 #  Publish-API:
 #    runs-on: ubuntu-latest
 #    needs: API-Deployment
@@ -111,7 +124,7 @@ jobs:
   Release-API:
     if: github.event.release.tag_name
     runs-on: ubuntu-latest
-    needs: deploy-api
+    needs: test-api
     steps:
       - uses: actions/checkout@v2
         with:
