Adding Merge-Dir

--- a/gateway-config/apimgr/fed/.project
+++ b/gateway-config/apimgr/fed/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rbi-demo-apimanager-20210306</name>
+	<name>apimanager</name>
 	<comment></comment>
 	<projects>
 	</projects>
