--- a/.github/workflows/api.emr-diagnostic.deploy.yml
+++ b/.github/workflows/api.emr-diagnostic.deploy.yml
@@ -1,14 +1,14 @@
 name: EMR-Diagnotics API
 
 env:
-  apiId: api-emr-diagnostic
+  apiId: api.emr-diagnostic
 
 on:
   push:
     branches:
       - main
     paths:
-      - api-emr-diagnostic/**
+      - api.emr-diagnostic/**
   release:
     types:
       - published
@@ -17,7 +17,7 @@ on:
 
 defaults:
   run:
-    working-directory: api-emr-diagnostic
+    working-directory: api.emr-diagnostic
 
 jobs:
   create-latest-docker-image:
